[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Pong/PaddleMovement.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Pong/Wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Timer.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Pong/Goal.gd" type="Script" id=5]
[ext_resource path="res://scripts/Pong/Pong.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 125 )

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/paddle.png-1d2a28e983477361da92398ef0d5efd1.stex"

[node name="Pong" type="Node2D"]
script = ExtResource( 6 )

[node name="Node2D" type="Node2D" parent="."]
scale = Vector2( 0.5, 0.5 )

[node name="Paddle" type="KinematicBody2D" parent="Node2D"]
position = Vector2( 139.081, 321.086 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Paddle"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Node2D/Paddle"]
texture = SubResource( 2 )

[node name="LeftWall" parent="." instance=ExtResource( 2 )]
position = Vector2( -25, 316.446 )
script = ExtResource( 5 )

[node name="RightWall" parent="." instance=ExtResource( 2 )]
position = Vector2( 1052.62, 309.905 )

[node name="BottomWall" parent="." instance=ExtResource( 2 )]
position = Vector2( 518.665, 625.268 )
scale = Vector2( 20.84, 0.2 )

[node name="TopWall" parent="." instance=ExtResource( 2 )]
position = Vector2( 509.99, -24.8045 )
scale = Vector2( 20.84, 0.2 )

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="EndTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Timer" parent="." instance=ExtResource( 3 )]

[connection signal="on_score" from="LeftWall" to="." method="_on_LeftWall_on_score"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="EndTimer" to="." method="_on_EndTimer_timeout"]
[connection signal="on_timeout" from="Timer" to="." method="_on_Timer_on_timeout"]
